--- a/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
@@ -28,5 +28,5 @@
         </tr>
     }
 </table>
-<a href="/Staff/AddStaff/" class="btn mb-1 btn-rounded btn-outline-info">Yeni Personel Girişi</a>
+<a href="/Staff/AddStaff/" class="btn mb-1 btn-rounded btn-outline-info">Yeni Personel Ekle</a>
 
