--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -12,6 +12,11 @@
                     <i class="fa fa-star menu-icon"></i><span class="nav-text">Referanslar</span>
                 </a>
             </li>
+            <li>
+                <a href="/Service/Index/" aria-expanded="false">
+                    <i class="fa fa-briefcase menu-icon"></i><span class="nav-text">Hizmetler</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
