--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_TrailerPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_TrailerPartial/Default.cshtml
@@ -1,38 +1,23 @@
-﻿
+﻿<style>
+    .custom-height {
+        min-height: 400px; /* Increase the minimum height to make the sections taller */
+    }
+</style>
+
 <div class="container-xxl py-5 px-0 wow zoomIn" data-wow-delay="0.1s">
-    <div class="row g-0">
+    <div class="row g-0 d-flex align-items-stretch custom-height">
         <div class="col-md-6 bg-dark d-flex align-items-center">
             <div class="p-5">
-                <h6 class="section-title text-start text-white text-uppercase mb-3">Luxury Living</h6>
-                <h1 class="text-white mb-4">Discover A Brand Luxurious Hotel</h1>
-                <p class="text-white mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
-                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3">Our Rooms</a>
-                <a href="" class="btn btn-light py-md-3 px-md-5">Book A Room</a>
+                <h6 class="section-title text-start text-white text-uppercase mb-3">HUZUR DOLU BİR TATİL</h6>
+                <h1 class="text-white mb-4">Otelimizi Keşfedin</h1>
+                <p class="text-white mb-4">Sizler için Hazırladığımız Otel Tanıtım Videosu ile Hakkımızda Daha Fazla Bilgi Sahibi Olabilirsiniz</p>
+                <a href="#" class="btn btn-primary py-md-3 px-md-5 me-3">Odalarımız</a>
+                <a href="#" class="btn btn-light py-md-3 px-md-5">Rezervasyon Yap</a>
             </div>
         </div>
         <div class="col-md-6">
-            <div class="video">
-                <button type="button" class="btn-play" data-bs-toggle="modal" data-src="https://www.youtube.com/embed/DWRcNpR6Kdc" data-bs-target="#videoModal">
-                    <span></span>
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content rounded-0">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Youtube Video</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-                <!-- 16:9 aspect ratio -->
-                <div class="ratio ratio-16x9">
-                    <iframe class="embed-responsive-item" src="" id="video" allowfullscreen allowscriptaccess="always"
-                            allow="autoplay"></iframe>
-                </div>
+            <div class="d-flex align-items-center justify-content-center h-100">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/9I2xta0ahIs?si=CvIqEG9hxBpWy1ak" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
         </div>
     </div>
