--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -38,19 +38,19 @@
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav mr-auto py-0">
                         <a href="/Default/Index/" class="nav-item nav-link active">ANA SAYFA</a>
-                        <a href="about.html" class="nav-item nav-link">HAKKIMIZDA</a>
-                        <a href="service.html" class="nav-item nav-link">HİZMETLERİMİZ</a>
-                        <a href="room.html" class="nav-item nav-link">ODALARIMIZ</a>
+                        <a href="/Default/Index/" class="nav-item nav-link">HAKKIMIZDA</a>
+                        <a href="/Default/Index/" class="nav-item nav-link">HİZMETLERİMİZ</a>
+                        <a href="/Default/Index/" class="nav-item nav-link">ODALARIMIZ</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SAYFALAR</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="booking.html" class="dropdown-item">REZERVASYON</a>
-                                <a href="team.html" class="dropdown-item">EKİBİMİZ</a>
-                                <a href="testimonial.html" class="dropdown-item">YORUMLAR</a>
+                                <a href="/Default/Index/" class="dropdown-item">REZERVASYON</a>
+                                <a href="/Default/Index/" class="dropdown-item">EKİBİMİZ</a>
+                                <a href="/Default/Index/" class="dropdown-item">YORUMLAR</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">İLETİŞİM</a>
-                        <a href="contact.html" class="nav-item nav-link">YARDIM</a>
+                        <a href="/Default/Index/" class="nav-item nav-link">İLETİŞİM</a>
+                        <a href="/Default/Index/" class="nav-item nav-link">YARDIM</a>
                     </div>
                 </div>
             </nav>
