--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -11,20 +11,20 @@
                 <div class="col-lg-7 px-5 text-start">
                     <div class="h-100 d-inline-flex align-items-center py-2 me-4">
                         <i class="fa fa-envelope text-primary me-2"></i>
-                        <p class="mb-0">hotelapi@example.com</p>
+                        <p class="mb-0">furkan.iscn@outlook.com</p>
                     </div>
                     <div class="h-100 d-inline-flex align-items-center py-2">
                         <i class="fa fa-phone-alt text-primary me-2"></i>
-                        <p class="mb-0">+90 326 413 6789</p>
+                        <p class="mb-0">+90 326 413 67 89</p>
                     </div>
                 </div>
                 <div class="col-lg-5 px-5 text-end">
                     <div class="d-inline-flex align-items-center py-2">
-                        <a class="me-3" href=""><i class="fab fa-facebook-f"></i></a>
+                        @*<a class="me-3" href=""><i class="fab fa-facebook-f"></i></a>
                         <a class="me-3" href=""><i class="fab fa-twitter"></i></a>
-                        <a class="me-3" href=""><i class="fab fa-linkedin-in"></i></a>
-                        <a class="me-3" href=""><i class="fab fa-instagram"></i></a>
-                        <a class="" href=""><i class="fab fa-youtube"></i></a>
+                        <a class="" href=""><i class="fab fa-youtube"></i></a>*@
+                        <a class="me-3" href="https://www.instagram.com/furkaniscn/" target="_blank"><i class="fab fa-instagram"></i></a>
+                        <a class="me-3" href="https://www.linkedin.com/in/furkan-i%C5%9Fcan-6b2298210/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
@@ -37,20 +37,20 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="/Default/Index/" class="nav-item nav-link active">ANA SAYFA</a>
-                        <a href="/Default/Index/" class="nav-item nav-link">HAKKIMIZDA</a>
-                        <a href="/Default/Index/" class="nav-item nav-link">HİZMETLERİMİZ</a>
-                        <a href="/Default/Index/" class="nav-item nav-link">ODALARIMIZ</a>
+                        <a href="#anasayfa" class="nav-item nav-link active">ANA SAYFA</a>
+                        <a href="#hakkimizda" class="nav-item nav-link">HAKKIMIZDA</a>
+                        <a href="#hizmetlerimiz" class="nav-item nav-link">HİZMETLERİMİZ</a>
+                        <a href="#odalarimiz" class="nav-item nav-link">ODALARIMIZ</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SAYFALAR</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="/Default/Index/" class="dropdown-item">REZERVASYON</a>
-                                <a href="/Default/Index/" class="dropdown-item">EKİBİMİZ</a>
-                                <a href="/Default/Index/" class="dropdown-item">YORUMLAR</a>
+                                <a href="#rezervasyon" class="dropdown-item">REZERVASYON</a>
+                                <a href="#ekibimiz" class="dropdown-item">EKİBİMİZ</a>
+                                <a href="#yorumlar" class="dropdown-item">YORUMLAR</a>
                             </div>
                         </div>
-                        <a href="/Default/Index/" class="nav-item nav-link">İLETİŞİM</a>
-                        <a href="/Default/Index/" class="nav-item nav-link">YARDIM</a>
+                        <a href="#iletisim" class="nav-item nav-link">İLETİŞİM</a>
+                        <a href="#iletisim" class="nav-item nav-link">YARDIM</a>
                     </div>
                 </div>
             </nav>
