--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_ServicePartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_ServicePartial/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<ResultServiceDto>
 
-<div class="container-xxl py-5">
+<div class="container-xxl py-5" id="hizmetlerimiz">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title text-center text-primary text-uppercase">HİZMETLERİMİZ</h6>
