--- a/Frontend/HotelProject.WebUI/Views/Default/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Default/Index.cshtml
@@ -8,7 +8,7 @@
 @await Component.InvokeAsync("_HeadPartial")
 
 <body>
-    <div class="container-xxl bg-white p-0">
+    <div class="container-xxl bg-white p-0" id="anasayfa">
         @await Component.InvokeAsync("_SpinnerPartial")
         @await Component.InvokeAsync("_NavbarPartial")
         @await Component.InvokeAsync("_SliderPartial")
@@ -19,7 +19,7 @@
         @await Component.InvokeAsync("_ServicePartial")
         @await Component.InvokeAsync("_TestimonialPartial")
         @await Component.InvokeAsync("_TeamPartial")
-        @await Component.InvokeAsync("_SubscribePartial")
+        @await Html.PartialAsync("_SubscribePartial")
         @await Component.InvokeAsync("_FooterPartial")
         @await Component.InvokeAsync("_ScriptsPartial")
 
