--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
@@ -1,44 +1,42 @@
 ﻿
-<div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s">
+<div class="container-fluid bg-dark text-light footer wow fadeIn" data-wow-delay="0.1s" id="iletisim">
     <div class="container pb-5">
         <div class="row g-5">
             <div class="col-md-6 col-lg-4">
                 <div class="bg-primary rounded p-4">
-                    <a href="index.html"><h1 class="text-white text-uppercase mb-3">Hotelier</h1></a>
-                    <p class="text-white mb-0">
-                        Download <a class="text-dark fw-medium" href="https://htmlcodex.com/hotel-html-template-pro">Hotelier – Premium Version</a>, build a professional website for your hotel business and grab the attention of new visitors upon your site’s launch.
-                    </p>
+                    <a href="index.html"><h1 class="text-white text-uppercase mb-3">HOTELIER</h1></a>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
-                <h6 class="section-title text-start text-primary text-uppercase mb-4">Contact</h6>
-                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                <h6 class="section-title text-start text-primary text-uppercase mb-4">İLETİŞİM</h6>
+                <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>31500, Reyhanlı, Hatay, Türkiye</p>
+                <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+90 326 413 03 11</p>
+                <p class="mb-2"><i class="fa fa-envelope me-3"></i>furkan.iscn@outlook.com</p>
                 <div class="d-flex pt-2">
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
+                    @*<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
-                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>*@
+                    <a class="btn btn-outline-light btn-social" href="https://www.linkedin.com/in/furkan-i%C5%9Fcan-6b2298210/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-outline-light btn-social" href="https://www.instagram.com/furkaniscn/" target="_blank"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
             <div class="col-lg-5 col-md-12">
                 <div class="row gy-5 g-4">
                     <div class="col-md-6">
-                        <h6 class="section-title text-start text-primary text-uppercase mb-4">Company</h6>
-                        <a class="btn btn-link" href="">About Us</a>
-                        <a class="btn btn-link" href="">Contact Us</a>
-                        <a class="btn btn-link" href="">Privacy Policy</a>
-                        <a class="btn btn-link" href="">Terms & Condition</a>
-                        <a class="btn btn-link" href="">Support</a>
+                        <h6 class="section-title text-start text-primary text-uppercase mb-4">ŞİRKETiMİZ</h6>
+                        <a class="btn btn-link" href="#hakkimizda">Hakkımızda</a>
+                        <a class="btn btn-link" href="#iletisim">Bizimle İletişime Geçin</a>
+                        <a class="btn btn-link" href="">Gizlilik Sözleşmesi</a>
+                        <a class="btn btn-link" href="">Kurallar & Şartlar</a>
+                        <a class="btn btn-link" href="#iletisim">Destek</a>
                     </div>
                     <div class="col-md-6">
-                        <h6 class="section-title text-start text-primary text-uppercase mb-4">Services</h6>
-                        <a class="btn btn-link" href="">Food & Restaurant</a>
-                        <a class="btn btn-link" href="">Spa & Fitness</a>
-                        <a class="btn btn-link" href="">Sports & Gaming</a>
-                        <a class="btn btn-link" href="">Event & Party</a>
-                        <a class="btn btn-link" href="">GYM & Yoga</a>
+                        <h6 class="section-title text-start text-primary text-uppercase mb-4">HİZMETLERİMİZ</h6>
+                        <a class="btn btn-link" href="#hizmetlerimiz">Yemekler & Restaurant</a>
+                        <a class="btn btn-link" href="#hizmetlerimiz">Spa & Fitness</a>
+                        <a class="btn btn-link" href="#hizmetlerimiz">Spor & Oyunlar</a>
+                        <a class="btn btn-link" href="#hizmetlerimiz">Parti & Aktiviteler</a>
+                        <a class="btn btn-link" href="#hizmetlerimiz">GYM & Yoga</a>
                     </div>
                 </div>
             </div>
@@ -48,15 +46,17 @@
         <div class="copyright">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a>
+                    &copy; Tüm Hakları Saklıdır --
+                    <span style="font-weight: bold; font-style: italic; color: #FF7F50;">Furkan İŞCAN</span>
+                    tarafından yapılmış ve tüm hakları saklıdır @DateTime.Now.Year
                 </div>
+
                 <div class="col-md-6 text-center text-md-end">
                     <div class="footer-menu">
-                        <a href="">Home</a>
-                        <a href="">Cookies</a>
-                        <a href="">Help</a>
-                        <a href="">FQAs</a>
+                        <a href="#anasayfa">Ana Sayfa</a>
+                        <a href="">Çerezler</a>
+                        <a href="#iletisim">Yardım</a>
+                        <a href="">Veri Kullanımı</a>
                     </div>
                 </div>
             </div>
