--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_OurRoomsPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_OurRoomsPartial/Default.cshtml
@@ -1,5 +1,5 @@
 ﻿@model List<ResultRoomDto>
-<div class="container-xxl py-5">
+<div class="container-xxl py-5" id="odalarimiz">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
             <h6 class="section-title text-center text-primary text-uppercase">ODALARIMIZ</h6>
