--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -44,7 +44,7 @@
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SAYFALAR</a>
                             <div class="dropdown-menu rounded-0 m-0">
-                                <a href="#rezervasyon" class="dropdown-item">REZERVASYON</a>
+                                <a href="/Booking/Index" class="dropdown-item">REZERVASYON</a>
                                 <a href="#ekibimiz" class="dropdown-item">EKİBİMİZ</a>
                                 <a href="#yorumlar" class="dropdown-item">YORUMLAR</a>
                             </div>
