--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/NavHeaderPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/NavHeaderPartial.cshtml
@@ -2,8 +2,8 @@
 <div class="nav-header" style=" background-color: darkslateblue;">
     <div class="brand-logo">
         <a href="index.html">
-            <b class="logo-abbr"><img src="~/adminweb/images/logo.png" alt=""> </b>
-            <span class="logo-compact" style="max-height: 40px;"><img src="~/adminweb/images/logo-compact.png" alt=""></span>
+            @*<b class="logo-abbr"><img src="~/adminweb/images/logo.png" alt=""> </b>*@
+            @*<span class="logo-compact" style="max-height: 40px;"><img src="~/adminweb/images/logo-compact.png" alt=""></span>*@
             <span class="brand-title" style="font-family: 'Arial', sans-serif; font-size: 24px; font-weight: bold; color: white; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); margin-left: 10px; display: inline-block;">
                 ISCN
             </span>
