--- a/Frontend/HotelProject.WebUI/Views/Testimonial/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Testimonial/Index.cshtml
@@ -5,7 +5,9 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-
+<div class="card-title">
+    <h4>REFERANSLAR</h4>
+</div>
 <table class="table table-striped">
     <tr>
         <th>#</th>
@@ -25,11 +27,11 @@
                 <span class="label gradient-1 rounded">@item.Title</span>
             </td>
             <td><a href="/Staff/DeleteTestimonial/@item.TestimonialID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
-            <td><a href="/Staff/UpdateTestimonial/@item.TestimonialID" class="btn mb-1 btn-rounded btn-outline-success">Güncelle</a></td>
+            <td><a href="/Staff/UpdateTestimonial/@item.TestimonialID" class="btn mb-1 btn-rounded btn-outline-warning">Güncelle</a></td>
         </tr>
     }
 </table>
-<a href="/Testimonial/AddTestimonial/" class="btn mb-1 btn-rounded btn-outline-info">Yeni Referans Ekle</a>
+<a href="/Testimonial/AddTestimonial/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Referans Ekle</a>
 
 
 
