--- a/Frontend/HotelProject.WebUI/Views/Default/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Default/Index.cshtml
@@ -12,8 +12,8 @@
         @await Component.InvokeAsync("_SpinnerPartial")
         @await Component.InvokeAsync("_NavbarPartial")
         @await Component.InvokeAsync("_SliderPartial")
-        @await Component.InvokeAsync("_ReservationPartial")
-        @await Component.InvokeAsync("_AboutUsPartial")
+@*        @await Component.InvokeAsync("_ReservationPartial")
+*@        @await Component.InvokeAsync("_AboutUsPartial")
         @await Component.InvokeAsync("_OurRoomsPartial")
         @await Component.InvokeAsync("_TrailerPartial")
         @await Component.InvokeAsync("_ServicePartial")
