--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_NavbarPartial/Default.cshtml
@@ -39,8 +39,8 @@
                     <div class="navbar-nav mr-auto py-0">
                         <a href="#anasayfa" class="nav-item nav-link active">ANA SAYFA</a>
                         <a href="#hakkimizda" class="nav-item nav-link">HAKKIMIZDA</a>
-                        <a href="#hizmetlerimiz" class="nav-item nav-link">HİZMETLERİMİZ</a>
                         <a href="#odalarimiz" class="nav-item nav-link">ODALARIMIZ</a>
+                        <a href="#hizmetlerimiz" class="nav-item nav-link">HİZMETLERİMİZ</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SAYFALAR</a>
                             <div class="dropdown-menu rounded-0 m-0">
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                         <a href="#iletisim" class="nav-item nav-link">İLETİŞİM</a>
-                        <a href="#iletisim" class="nav-item nav-link">YARDIM</a>
+                        <a href="#iletisim" class="nav-item nav-link">GİRİŞ YAP</a>
                     </div>
                 </div>
             </nav>
