--- a/Frontend/HotelProject.WebUI/Views/Login/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Login/Index.cshtml
@@ -50,7 +50,7 @@
                                     </div>
                                     <button class="btn login-form__btn submit w-100">Giriş Yap</button>
                                 </form>
-                                <p class="mt-5 login-form__footer">Hesabınız yoksa hemen <a href="/Register/Index" class="text-primary">Kayıt Ol</a></p>
+                                <p class="mt-5 login-form__footer">Bir Hesabın Yok mu? <a href="/Register/Index" class="text-primary">Kayıt Ol</a></p>
                             </div>
                         </div>
                     </div>
