--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -3,6 +3,11 @@
     <div class="nk-nav-scroll">
         <ul class="metismenu" id="menu">
             <li>
+                <a href="/AdminAbout/Index/" aria-expanded="false">
+                    <i class="fa fa-info-circle menu-icon"></i><span class="nav-text">Hakkımızda</span>
+                </a>
+            </li>
+            <li>
                 <a href="/Staff/Index/" aria-expanded="false">
                     <i class="fa fa-users menu-icon"></i><span class="nav-text">Personeller</span>
                 </a>
