--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -22,6 +22,11 @@
                     <i class="fa fa-briefcase menu-icon"></i><span class="nav-text">Hizmetler</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminRoom/Index/" aria-expanded="false">
+                    <i class="fa fa-bed menu-icon"></i><span class="nav-text">Odalar</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
