--- a/Frontend/HotelProject.WebUI/Views/Staff/AddStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Staff/AddStaff.cshtml
@@ -20,6 +20,6 @@
     <label>Sosyal Medya 3</label>
     <input type="text" asp-for="SocialMedia3" class="form-control" />
     <br />
-    <button class="btn mb-1 btn-rounded btn-outline-info">Personeli Ekle</button>
+    <button class="btn mb-1 btn-rounded btn-outline-success">Personel Ekle</button>
 </form>
 
