--- a/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Staff/Index.cshtml
@@ -27,7 +27,7 @@
             </td>
             <td><a href="/Staff/DeleteStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
             <td><a href="/Staff/UpdateStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-warning">Güncelle</a></td>
-            <td><a href="#" class="btn mb-1 btn-rounded btn-outline-info">Detaylar</a></td>
+            <td><a href="/Staff/GetStaff/" class="btn mb-1 btn-rounded btn-outline-info">Detaylar</a></td>
         </tr>
     }
 </table>
