--- a/Frontend/HotelProject.WebUI/Views/Room/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Room/Index.cshtml
@@ -11,15 +11,9 @@
     <div class="container-xxl bg-white p-0" id="anasayfa">
         @await Component.InvokeAsync("_SpinnerPartial")
         @await Component.InvokeAsync("_NavbarPartial")
-        @await Component.InvokeAsync("_SliderPartial")
-        @*@await Component.InvokeAsync("_ReservationPartial")*@
-        @await Component.InvokeAsync("_AboutUsPartial")
+        @await Component.InvokeAsync("_OurRoomsCoverPartial")
         @await Component.InvokeAsync("_OurRoomsPartial")
-        @await Component.InvokeAsync("_TrailerPartial")
-        @await Component.InvokeAsync("_ServicePartial")
-        @await Component.InvokeAsync("_TestimonialPartial")
-        @await Component.InvokeAsync("_TeamPartial")
-        @await Html.PartialAsync("_SubscribePartial")
+        @await Html.PartialAsync("/Views/Default/_SubscribePartial.cshtml")
         @await Component.InvokeAsync("_FooterPartial")
         @await Component.InvokeAsync("_ScriptsPartial")
 
