--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_TrailerPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_TrailerPartial/Default.cshtml
@@ -11,7 +11,7 @@
                 <h6 class="section-title text-start text-white text-uppercase mb-3">HUZUR DOLU BİR TATİL</h6>
                 <h1 class="text-white mb-4">Otelimizi Keşfedin</h1>
                 <p class="text-white mb-4">Sizler için Hazırladığımız Otel Tanıtım Videosu ile Hakkımızda Daha Fazla Bilgi Sahibi Olabilirsiniz</p>
-                <a href="/Booking/Index/" class="btn btn-primary py-md-3 px-md-5 me-3">Odalarımız</a>
+                <a href="/Room/Index/" class="btn btn-primary py-md-3 px-md-5 me-3">Odalarımız</a>
                 <a href="/Booking/Index/" class="btn btn-light py-md-3 px-md-5">Rezervasyon Yap</a>
             </div>
         </div>
