--- a/Frontend/HotelProject.WebUI/Views/AdminAbout/UpdateAbout.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminAbout/UpdateAbout.cshtml
@@ -24,6 +24,6 @@
     <label>Müşteri Sayısı</label>
     <input type="text" asp-for="CustomerCount" class="form-control" />
     <br />
-    <button class="btn mb-1 btn-rounded btn-outline-warning">Hakkımızda Bilgisini Güncelle</button>
+    <button class="btn mb-1 btn-rounded btn-outline-success">Hakkımızda Bilgisini Güncelle</button>
 </form>
 
