--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -27,6 +27,11 @@
                     <i class="fa fa-bed menu-icon"></i><span class="nav-text">Odalar</span>
                 </a>
             </li>
+            <li>
+                <a href="/Guest/Index/" aria-expanded="false">
+                    <i class="fa fa-user-circle menu-icon"></i><span class="nav-text">Misafirler</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
