--- a/Frontend/HotelProject.WebUI/Views/Service/AddService.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Service/AddService.cshtml
@@ -17,7 +17,7 @@
     <input type="text" asp-for="Description" class="form-control" />
     <span asp-validation-for="Description" class="text-danger"></span>
     <br />
-    <button class="btn mb-1 btn-rounded btn-outline-info">Hizmeti Ekle</button>
+    <button class="btn mb-1 btn-rounded btn-outline-success">Hizmeti Ekle</button>
 </form>
 
 
