--- a/Frontend/HotelProject.WebUI/Views/AdminContact/SendBox.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminContact/SendBox.cshtml
@@ -1,6 +1,6 @@
-﻿@model List<ContactInboxDto>
+﻿@model List<ResultSendBoxDto>
 @{
-    ViewData["Title"] = "Inbox";
+    ViewData["Title"] = "SendBox";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
@@ -13,7 +13,7 @@
     <div role="toolbar" class="toolbar">
         <div class="btn-group">
             <button aria-expanded="false" class="btn btn-dark dropdown-toggle" type="button">
-                Gelen Mesajlar <span class="caret m-l-5"></span>
+                Gönderilen Mesajlar <span class="caret m-l-5"></span>
             </button>
         </div>
     </div>
@@ -29,7 +29,12 @@
                         </div><span class="star-toggle ti-star"></span>
                     </div>
                     <div class="col-mail col-mail-2">
-                        <div class="subject">@item.Message.Substring(0,120)</div>
+                        <div class="subject">
+                            <b>
+                                Konu: @item.Title,
+                            </b>
+                            Alıcı: @item.ReceiverName @item.ReceiverSurname
+                        </div>
                         <div class="date">@(((DateTime)item.Date).ToString("dd-MMM-yyyy"))</div>
                     </div>
                 </a>
