--- a/Frontend/HotelProject.WebUI/Views/AdminContact/Inbox.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminContact/Inbox.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ContactInboxDto>
+﻿@model List<InboxContactDto>
 @{
     ViewData["Title"] = "Inbox";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
@@ -21,7 +21,7 @@
         @foreach (var item in Model)
         {
             <div class="message">
-                <a href="email-read.html">
+                <a href="/AdminContact/MessageDetailsByInbox/@item.ContactID">
                     <div class="col-mail col-mail-1">
                         <div class="email-checkbox">
                             <input type="checkbox" id="chk2">
