--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -32,6 +32,16 @@
                     <i class="fa fa-user-circle menu-icon"></i><span class="nav-text">Misafirler</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminContact/Inbox/" aria-expanded="false">
+                    <i class="fa fa-bell menu-icon"></i><span class="nav-text">Mesajlar</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminMail/Index/" aria-expanded="false">
+                    <i class="fa fa-envelope menu-icon"></i><span class="nav-text">Mail İşlemleri</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
