--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -42,6 +42,16 @@
                     <i class="fa fa-envelope menu-icon"></i><span class="nav-text">Mail İşlemleri</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminImageFile/Index/" aria-expanded="false">
+                    <i class="fa fa-image   menu-icon"></i><span class="nav-text">Resim Yükleme İşlemleri</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminFile/Index/" aria-expanded="false">
+                    <i class="fa fa-folder-open   menu-icon"></i><span class="nav-text">Dosya Yükleme İşlemleri</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
