--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_FooterPartial/Default.cshtml
@@ -4,7 +4,7 @@
         <div class="row g-5">
             <div class="col-md-6 col-lg-4">
                 <div class="bg-primary rounded p-4">
-                    <a href="#anasayfa"><h1 class="text-white text-uppercase mb-3">HOTELIER</h1></a>
+                    <a href="/Default/Index/"><h1 class="text-white text-uppercase mb-3">HOTELIER</h1></a>
                 </div>
             </div>
             <div class="col-md-6 col-lg-3">
