--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -8,17 +8,17 @@
                 </a>
             </li>
             <li>
-                <a href="/Staff/Index/" aria-expanded="false">
+                <a href="/AdminStaff/Index/" aria-expanded="false">
                     <i class="fa fa-users menu-icon"></i><span class="nav-text">Personeller</span>
                 </a>
             </li>
             <li>
-                <a href="/Testimonial/Index/" aria-expanded="false">
+                <a href="/AdminTestimonial/Index/" aria-expanded="false">
                     <i class="fa fa-star menu-icon"></i><span class="nav-text">Referanslar</span>
                 </a>
             </li>
             <li>
-                <a href="/Service/Index/" aria-expanded="false">
+                <a href="/AdminService/Index/" aria-expanded="false">
                     <i class="fa fa-briefcase menu-icon"></i><span class="nav-text">Hizmetler</span>
                 </a>
             </li>
@@ -28,7 +28,7 @@
                 </a>
             </li>
             <li>
-                <a href="/Guest/Index/" aria-expanded="false">
+                <a href="/AdminGuest/Index/" aria-expanded="false">
                     <i class="fa fa-user-circle menu-icon"></i><span class="nav-text">Misafirler</span>
                 </a>
             </li>
