--- a/Frontend/HotelProject.WebUI/Views/Login/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Login/Index.cshtml
@@ -13,6 +13,7 @@
     <title>Otel Giriş Paneli</title>
 
     <link rel="icon" type="~/adminweb/image/png" sizes="16x16" href="~/adminweb/assets/images/favicon.png">
+    <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous"> -->
     <link href="~/adminweb/css/style.css" rel="stylesheet">
 </head>
 
@@ -34,7 +35,7 @@
                         <div class="card login-form mb-0">
                             <div class="card-body pt-5">
                                 <a class="text-center" href="index.html"> <h4>Otel Giriş Paneli</h4></a>
-                                <form class="mt-5 mb-5 login-input" method="post" asp-action="Index" asp-controller="AdminAbout">
+                                <form class="mt-5 mb-5 login-input" method="post">
                                     <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Kullanıcı Adınız" asp-for="Username">
                                         <span asp-validation-for="Username" class="text-danger"></span>
@@ -43,7 +44,7 @@
                                         <input type="password" class="form-control" placeholder="Şifreniz" asp-for="Password">
                                         <span asp-validation-for="Password" class="text-danger"></span>
                                     </div>
-                                    <button type="submit" class="btn login-form__btn submit w-100">Giriş Yap</button>
+                                    <button class="btn login-form__btn submit w-100">Giriş Yap</button>
                                 </form>
                                 <p class="mt-5 login-form__footer">Bir Hesabın Yok mu? <a href="/Register/Index" class="text-primary">Kayıt Ol</a></p>
                             </div>
