--- a/Frontend/HotelProject.WebUI/Views/Contact/SendMessage.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Contact/SendMessage.cshtml
@@ -52,6 +52,12 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
+                                    <input type="text" class="form-control" asp-for="Subject" placeholder="Konu Başlığı">
+                                    <label for="subject">Konu Başlığı</label>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-floating">
                                     <input type="text" class="form-control" asp-for="Subject" placeholder="Konu">
                                     <label for="subject">Konu</label>
                                 </div>
