--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -52,6 +52,11 @@
                     <i class="fa fa-folder-open   menu-icon"></i><span class="nav-text">Dosya Yükleme İşlemleri</span>
                 </a>
             </li>
+            <li>
+                <a href="/AdminUsers/Index/" aria-expanded="false">
+                    <i class="fa fa-id-card menu-icon"></i><span class="nav-text">Kullanıcılar</span>
+                </a>
+            </li>
         </ul>
     </div>
 </div>
