--- a/Frontend/HotelProject.WebUI/Views/Register/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Register/Index.cshtml
@@ -53,6 +53,10 @@
                                         <span asp-validation-for="Username" class="text-warning"></span>
                                     </div>
                                     <div class="form-group">
+                                        <input type="text" class="form-control" placeholder="Yaşadığınız Şehir" asp-for="City">
+                                        <span asp-validation-for="City" class="text-warning"></span>
+                                    </div>
+                                    <div class="form-group">
                                         <input type="text" class="form-control" placeholder="Mailiniz" asp-for="Mail">
                                         <span asp-validation-for="Mail" class="text-warning"></span>
                                     </div>
