--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -3,6 +3,16 @@
     <div class="nk-nav-scroll">
         <ul class="metismenu" id="menu">
             <li>
+                <a href="/Default/Index/" aria-expanded="false">
+                    <i class="fa fa-globe menu-icon"></i><span class="nav-text">Siteye Git</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminAbout/Index/" aria-expanded="false">
+                    <i class="fa fa-columns menu-icon"></i><span class="nav-text">Dashboard</span>
+                </a>
+            </li>
+            <li>
                 <a href="/AdminAbout/Index/" aria-expanded="false">
                     <i class="fa fa-info-circle menu-icon"></i><span class="nav-text">Hakkımızda</span>
                 </a>
@@ -55,6 +65,26 @@
             <li>
                 <a href="/AdminUsers/Index/" aria-expanded="false">
                     <i class="fa fa-id-card menu-icon"></i><span class="nav-text">Kullanıcılar</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminWorkLocation/Index/" aria-expanded="false">
+                    <i class="fa fa-map-signs menu-icon"></i><span class="nav-text">Otel Lokasyonları</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminWorkLocation/Index/" aria-expanded="false">
+                    <i class="fa fa-id-badge menu-icon"></i><span class="nav-text">Roller</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminWorkLocation/Index/" aria-expanded="false">
+                    <i class="fa fa-cogs menu-icon"></i><span class="nav-text">Ayarlar</span>
+                </a>
+            </li>
+            <li>
+                <a href="/AdminWorkLocation/Index/" aria-expanded="false">
+                    <i class="fa fa-sign-out menu-icon"></i><span class="nav-text">Çıkış Yap</span>
                 </a>
             </li>
         </ul>
