--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -15,6 +15,7 @@
 @using HotelProject.WebUI.Dtos.GuestDto
 @using HotelProject.WebUI.Dtos.SendMessageDto
 @using HotelProject.WebUI.Dtos.MessageCategoryDto
+@using HotelProject.WebUI.Dtos.WorkLocationDto
 @using HotelProject.WebUI.Models.Mail
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
