--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -63,7 +63,7 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminUsers/Index/" aria-expanded="false">
+                <a href="/AdminUsers/UserList/" aria-expanded="false">
                     <i class="fa fa-id-card menu-icon"></i><span class="nav-text">Kullanıcılar</span>
                 </a>
             </li>
