--- a/Frontend/HotelProject.WebUI/Views/AdminUsers/UserList.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminUsers/UserList.cshtml
@@ -8,23 +8,55 @@
 <table class="table table-xs mb-0">
     <thead>
         <tr>
-            <th>#</th>
-            <th>Ad Soyad</th>
+            <th>Kullanıcı</th>
             <th>Şehir</th>
+            <th>Ülke</th>
             <th>Durum</th>
+            <th>Cinsiyet</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr>
-                <td><img src="@item.ImageUrl" class=" rounded-circle mr-3" alt=""></td>
-                <td>@item.Name @item.Surname</td>
-                <td>@item.City</td>
                 <td>
-                    <i class="fa fa-circle-o text-success  mr-2"></i>
-                    <span class="label gradient-2 rounded">Aktif</span>
+                    <img src="@item.ImageUrl" class=" rounded-circle mr-3" alt="">
+                    @item.Name @item.Surname
                 </td>
+                <td>@item.City</td>
+                <td>@item.Country</td>
+                @if (item.Gender == "Erkek")
+                {
+                    <td>
+                        <div>
+                            <div class="progress" style="height: 6px">
+                                <div class="progress-bar bg-success" style="width: 70%"></div>
+                            </div>
+                        </div>
+                    </td>
+                }
+                @if (item.Gender == "Kadın")
+                {
+                    <td>
+                        <div>
+                            <div class="progress" style="height: 6px">
+                                <div class="progress-bar bg-danger" style="width: 90%"></div>
+                            </div>
+                        </div>
+                    </td>
+                }
+                @if (item.Gender == "Erkek")
+                {
+                    <td>
+                        <i class="fa fa-circle-o text-success  mr-2"></i>@item.Gender
+                    </td>
+                }
+                @if (item.Gender == "Kadın")
+                {
+                    <td>
+                        <i class="fa fa-circle-o text-danger  mr-2"></i>@item.Gender
+                    </td>
+                }
             </tr>
         }
     </tbody>
