--- a/Frontend/HotelProject.WebUI/Views/AdminUsers/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminUsers/Index.cshtml
@@ -4,8 +4,67 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-
 <table class="table table-xs mb-0">
+    <thead>
+        <tr>
+            <th>Kullanıcı</th>
+            <th>Şehir</th>
+            <th>Ülke</th>
+            <th>Durum</th>
+            <th>Cinsiyet</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    <img src="@item.ImageUrl" class=" rounded-circle mr-3" alt="">
+                    @item.Name @item.Surname
+                </td>
+                <td>@item.City</td>
+                <td>@item.Country</td>
+                @if (item.Gender == "Erkek")
+                {
+                    <td>
+                        <div>
+                            <div class="progress" style="height: 6px">
+                                <div class="progress-bar bg-success" style="width: 70%"></div>
+                            </div>
+                        </div>
+                    </td>
+                }
+                @if (item.Gender == "Kadın")
+                {
+                    <td>
+                        <div>
+                            <div class="progress" style="height: 6px">
+                                <div class="progress-bar bg-danger" style="width: 90%"></div>
+                            </div>
+                        </div>
+                    </td>
+                }
+                @if (item.Gender == "Erkek")
+                {
+                    <td>
+                        <i class="fa fa-circle-o text-success  mr-2"></i>@item.Gender
+                    </td>
+                }
+                @if (item.Gender == "Kadın")
+                {
+                    <td>
+                        <i class="fa fa-circle-o text-danger  mr-2"></i>@item.Gender
+                    </td>
+                }
+            </tr>
+        }
+    </tbody>
+</table>
+<br />
+<a href="/Register/Index/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Kullanıcı Ekle</a>
+
+
+@*<table class="table table-xs mb-0">
     <thead>
         <tr>
             <th>#</th>
@@ -31,3 +90,4 @@
 </table>
 <br />
 <a href="/Register/Index/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Kullanıcı Ekle</a>
+*@
