--- a/Frontend/HotelProject.WebUI/Views/AdminUsers/UserList.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminUsers/UserList.cshtml
@@ -4,11 +4,11 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-
 <table class="table table-xs mb-0">
     <thead>
         <tr>
             <th>Kullanıcı</th>
+            <th>Çalıştığı Şube</th>
             <th>Şehir</th>
             <th>Ülke</th>
             <th>Durum</th>
@@ -18,11 +18,12 @@
     <tbody>
         @foreach (var item in Model)
         {
-            @*<tr>
+            <tr>
                 <td>
                     <img src="@item.ImageUrl" class=" rounded-circle mr-3" alt="">
                     @item.Name @item.Surname
                 </td>
+                <td><span class="label gradient-2 rounded">@item.WorkLocationName</span></td>
                 <td>@item.City</td>
                 <td>@item.Country</td>
                 @if (item.Gender == "Erkek")
@@ -57,7 +58,7 @@
                         <i class="fa fa-circle-o text-danger  mr-2"></i>@item.Gender
                     </td>
                 }
-            </tr>*@
+            </tr>
         }
     </tbody>
 </table>
