--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -8,7 +8,7 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminAbout/Index/" aria-expanded="false">
+                <a href="/AdminDashboard/Index/" aria-expanded="false">
                     <i class="fa fa-columns menu-icon"></i><span class="nav-text">Dashboard</span>
                 </a>
             </li>
