--- a/Frontend/HotelProject.WebUI/Views/AdminImageFile/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminImageFile/Index.cshtml
@@ -6,6 +6,6 @@
 <form method="post" enctype="multipart/form-data">
     <input type="file" name="file" class="form-control"/>
     <br />
-    <button class="btn mb-1 btn-rounded btn-outline-success">Dosyayı Yükle</button>
+    <button class="btn mb-1 btn-rounded btn-outline-success">Resmi Yükle</button>
 </form>
 
