--- a/Frontend/HotelProject.WebUI/Views/AdminService/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminService/Index.cshtml
@@ -21,12 +21,12 @@
             <td>
                 <span class="label gradient-2 rounded">@item.Title</span>
             </td>
-            <td><a href="/Service/DeleteService/@item.ServiceID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
-            <td><a href="/Service/UpdateService/@item.ServiceID" class="btn mb-1 btn-rounded btn-outline-warning">Güncelle</a></td>
+            <td><a href="/AdminService/DeleteService/@item.ServiceID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
+            <td><a href="/AdminService/UpdateService/@item.ServiceID" class="btn mb-1 btn-rounded btn-outline-warning">Güncelle</a></td>
         </tr>
     }
 </table>
-<a href="/Service/AddService/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Hizmet Ekle</a>
+<a href="/AdminService/AddService/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Hizmet Ekle</a>
 
 
 
