--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/Index.cshtml
@@ -25,11 +25,11 @@
             <td>
                 <span class="label gradient-1 rounded">@item.Title</span>
             </td>
-            <td><a href="/Staff/DeleteStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
-            <td><a href="/Staff/UpdateStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-warning">Güncelle</a></td>
-            <td><a href="/Staff/GetStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-info">Detaylar</a></td>
+            <td><a href="/AdminStaff/DeleteStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-danger">Sil</a></td>
+            <td><a href="/AdminStaff/UpdateStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-warning">Güncelle</a></td>
+            <td><a href="/AdminStaff/GetStaff/@item.StaffID" class="btn mb-1 btn-rounded btn-outline-info">Detaylar</a></td>
         </tr>
     }
 </table>
-<a href="/Staff/AddStaff/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Personel Ekle</a>
+<a href="/AdminStaff/AddStaff/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Personel Ekle</a>
 
