--- a/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/AddWorkLocation.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/AddWorkLocation.cshtml
@@ -1,8 +1,17 @@
-﻿
+﻿@model CreateWorkLocationDto
 @{
     ViewData["Title"] = "AddWorkLocation";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<h1>AddWorkLocation</h1>
+<form method="post">
+    <label>Lokasyon Adı</label>
+    <input type="text" asp-for="WorkLocationName" class="form-control" />
+    <br />
+    <label>Bulunduğu Şehir</label>
+    <input type="text" asp-for="WorkLocationCity" class="form-control" />
+    <br />
+    <button class="btn mb-1 btn-rounded btn-outline-success">Otel Lokasyonu Ekle</button>
+</form>
+
 
