--- a/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/UpdateWorkLocation.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminWorkLocation/UpdateWorkLocation.cshtml
@@ -1,8 +1,18 @@
-﻿
+﻿@model UpdateWorkLocationDto
 @{
     ViewData["Title"] = "UpdateWorkLocation";
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
-<h1>UpdateWorkLocation</h1>
+<form method="post">
+    <input type="hidden" asp-for="WorkLocationID" />
+    <label>Lokasyon Adı</label>
+    <input type="text" asp-for="WorkLocationName" class="form-control" />
+    <br />
+    <label>Bulunduğu Şehir</label>
+    <input type="text" asp-for="WorkLocationCity" class="form-control" />
+    <br />
+    <button class="btn mb-1 btn-rounded btn-outline-success">Otel Lokasyonunu Güncelle</button>
+</form>
+
 
