--- a/Frontend/HotelProject.WebUI/Views/Dashboard/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Dashboard/Index.cshtml
@@ -3,9 +3,12 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<!DOCTYPE html>
+<html lang="en">
+
 @await Component.InvokeAsync("_DashboardHeadPartial")
 
-<div class="container-fluid mt-3">
+<body>
 
     @await Component.InvokeAsync("_DashboardWidgetPartial")
 
@@ -52,8 +55,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="row">
         <div class="col-lg-6 col-md-12">
             <div class="card">
@@ -123,7 +124,6 @@
             </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-lg-3 col-sm-6">
             <div class="card">
@@ -174,8 +174,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
@@ -306,8 +304,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="row">
         <div class="col-xl-3 col-lg-6 col-sm-6 col-xxl-6">
             <div class="card">
@@ -413,8 +409,6 @@
             </div>
         </div>
     </div>
-
-
     <div class="row">
         <div class="col-lg-3 col-sm-6">
             <div class="card">
@@ -501,30 +495,9 @@
             </div>
         </div>
     </div>
-</div>
 
-<script src="~/adminweb/plugins/common/common.min.js"></script>
-<script src="~/adminweb/js/custom.min.js"></script>
-<script src="~/adminweb/js/settings.js"></script>
-<script src="~/adminweb/js/gleek.js"></script>
-<script src="~/adminweb/js/styleSwitcher.js"></script>
+</body>
 
-<!-- Chartjs -->
-<script src="~/adminweb/plugins/chart.js/Chart.bundle.min.js"></script>
-<!-- Circle progress -->
-<script src="~/adminweb/plugins/circle-progress/circle-progress.min.js"></script>
-<!-- Datamap -->
-<script src="~/adminweb/plugins/d3v3/index.js"></script>
-<script src="~/adminweb/plugins/topojson/topojson.min.js"></script>
-<script src="~/adminweb/plugins/datamaps/datamaps.world.min.js"></script>
-<!-- Morrisjs -->
-<script src="~/adminweb//plugins/raphael/raphael.min.js"></script>
-<script src="~/adminweb//plugins/morris/morris.min.js"></script>
-<!-- Pignose Calender -->
-<script src="~/adminweb/plugins/moment/moment.min.js"></script>
-<script src="~/adminweb/plugins/pg-calendar/js/pignose.calendar.min.js"></script>
-<!-- ChartistJS -->
-<script src="~/adminweb/plugins/chartist/js/chartist.min.js"></script>
-<script src="~/adminweb/plugins/chartist-plugin-tooltips/js/chartist-plugin-tooltip.min.js"></script>
+@await Component.InvokeAsync("_DashboardScriptPartial")
 
-<script src="~/adminweb/js/dashboard/dashboard-1.js"></script>
+</html>
