--- a/Frontend/HotelProject.WebUI/Views/Contact/SendMessage.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Contact/SendMessage.cshtml
@@ -52,7 +52,7 @@
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
-                                    @Html.DropDownListFor(x=>x.MessageCategoryID, (List<SelectListItem>)ViewBag.v,
+                                    @Html.DropDownListFor(x=>x.MessageCategoryID, (List<SelectListItem>)ViewBag.messageCategory,
                                     new{@class = "form-control"})
                                     <label for="subject">Konu Kategorisi</label>
                                 </div>
