--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/GetStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/GetStaff.cshtml
@@ -15,7 +15,7 @@
         <th>Sosyal Medya 1</th>
         <th>Sosyal Medya 2</th>
         <th>Sosyal Medya 3</th>
-        <th>Personel Görseli</th>
+        <th>Personel Görseli(Url)</th>
     </tr>
     <tr>
         <td>
@@ -28,6 +28,6 @@
         <td>@Model.SocialMedia1</td>
         <td>@Model.SocialMedia2</td>
         <td>@Model.SocialMedia3</td>
-        <td>@Model.StaffImage</td>
+        <td>@Model.StaffImageUrl</td>
     </tr>
 </table>
