--- a/Frontend/HotelProject.WebUI/Views/AdminStaff/UpdateStaff.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminStaff/UpdateStaff.cshtml
@@ -12,6 +12,9 @@
     <label>Personel Unvanı</label>
     <input type="text" asp-for="Title" class="form-control" />
     <br />
+    <label>Personel Görseli(Url)</label>
+    <input type="text" asp-for="StaffImageUrl" class="form-control" />
+    <br />
     <label>Sosyal Medya 1</label>
     <input type="text" asp-for="SocialMedia1" class="form-control" />
     <br />
