--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_TeamPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_TeamPartial/Default.cshtml
@@ -11,7 +11,7 @@
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="rounded shadow overflow-hidden">
                         <div class="position-relative">
-                            <img class="img-fluid" src="@item.StaffImage" alt="">
+                            <img class="img-fluid" src="@item.StaffImageUrl" alt="">
                             <div class="position-absolute start-50 top-100 translate-middle d-flex align-items-center">
                                 <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square btn-primary mx-1" href=""><i class="fab fa-twitter"></i></a>
