--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardLast6BookingListPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardLast6BookingListPartial/Default.cshtml
@@ -23,7 +23,7 @@
                                         <td>@item.Name @item.Surname</td>
                                         <td>@item.City</td>
                                         <td>
-                                            <span>@item.Country</span>
+                                            <span class="label gradient-2 rounded">@item.Country</span>
                                         </td>
                                         @if (item.Status == "Onaylandı")
                                         {
