--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardWidgetPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardWidgetPartial/Default.cshtml
@@ -10,7 +10,7 @@
                         @DateTime.Now.Day - @DateTime.Now.ToString("MMMM") - @DateTime.Now.Year
                     </p>
                 </div>
-                <span class="float-right display-5 opacity-5"><i class="fa fa-shopping-cart"></i></span>
+                <span class="float-right display-5 opacity-5"><i class="fa fa-user"></i></span>
             </div>
         </div>
     </div>
@@ -24,7 +24,7 @@
                         @DateTime.Now.Day - @DateTime.Now.ToString("MMMM") - @DateTime.Now.Year
                     </p>
                 </div>
-                <span class="float-right display-5 opacity-5"><i class="fa fa-money"></i></span>
+                <span class="float-right display-5 opacity-5"><i class="fa fa-book"></i></span>
             </div>
         </div>
     </div>
@@ -52,7 +52,7 @@
                         @DateTime.Now.Day - @DateTime.Now.ToString("MMMM") - @DateTime.Now.Year
                     </p>
                 </div>
-                <span class="float-right display-5 opacity-5"><i class="fa fa-heart"></i></span>
+                <span class="float-right display-5 opacity-5"><i class="fa fa-bed"></i></span>
             </div>
         </div>
     </div>
