--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -17,6 +17,7 @@
 @using HotelProject.WebUI.Dtos.MessageCategoryDto
 @using HotelProject.WebUI.Dtos.WorkLocationDto
 @using HotelProject.WebUI.Dtos.AppUserDto
+@using HotelProject.WebUI.Dtos.DashboardDto
 @using HotelProject.WebUI.Models.Mail
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
