--- a/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardSubscribeCountPartial/Default.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/Shared/Components/_DashboardSubscribeCountPartial/Default.cshtml
@@ -21,6 +21,7 @@
             </div>
         </div>
     </div>
+
     <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="social-graph-wrapper widget-linkedin">
@@ -42,6 +43,7 @@
             </div>
         </div>
     </div>
+
     <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="social-graph-wrapper widget-googleplus">
@@ -50,19 +52,20 @@
             <div class="row">
                 <div class="col-6 border-right">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">89k</h4>
-                        <p class="m-0">Friends</p>
+                        <h4 class="m-1">@ViewBag.instagramFollowers</h4>
+                        <p class="m-0">Takipçiler</p>
                     </div>
                 </div>
                 <div class="col-6">
                     <div class="pt-3 pb-3 pl-0 pr-0 text-center">
-                        <h4 class="m-1">119k</h4>
-                        <p class="m-0">Followers</p>
+                        <h4 class="m-1">@ViewBag.instagramFollowing</h4>
+                        <p class="m-0">Takip Ettiklerim</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="col-lg-3 col-sm-6">
         <div class="card">
             <div class="social-graph-wrapper widget-twitter">
