--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -73,7 +73,7 @@
                 </a>
             </li>
             <li>
-                <a href="/AdminWorkLocation/Index/" aria-expanded="false">
+                <a href="/Role/Index/" aria-expanded="false">
                     <i class="fa fa-id-badge menu-icon"></i><span class="nav-text">Roller</span>
                 </a>
             </li>
