--- a/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/_ViewImports.cshtml
@@ -19,5 +19,6 @@
 @using HotelProject.WebUI.Dtos.AppUserDto
 @using HotelProject.WebUI.Dtos.DashboardDto
 @using HotelProject.WebUI.Models.Mail
+@using HotelProject.WebUI.Models.Role
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
