--- a/Frontend/HotelProject.WebUI/Views/AdminUsers/Index.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminUsers/Index.cshtml
@@ -4,6 +4,9 @@
     Layout = "~/Views/AdminLayout/_AdminLayout.cshtml";
 }
 
+<div class="card-title">
+    <h4>Kullanıcı Listesi</h4>
+</div>
 <table class="table table-xs mb-0">
     <thead>
         <tr>
@@ -62,32 +65,3 @@
 </table>
 <br />
 <a href="/Register/Index/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Kullanıcı Ekle</a>
-
-
-@*<table class="table table-xs mb-0">
-    <thead>
-        <tr>
-            <th>#</th>
-            <th>Ad Soyad</th>
-            <th>Şehir</th>
-            <th>Durum</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td><img src="@item.ImageUrl" class=" rounded-circle mr-3" alt=""></td>
-                <td>@item.Name @item.Surname</td>
-                <td>@item.City</td>
-                <td>
-                    <i class="fa fa-circle-o text-success  mr-2"></i>
-                    <span class="label gradient-2 rounded">Aktif</span>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-<br />
-<a href="/Register/Index/" class="btn mb-1 btn-rounded btn-outline-success">Yeni Kullanıcı Ekle</a>
-*@
