--- a/Frontend/HotelProject.WebUI/Views/AdminContact/AddSendMessage.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminContact/AddSendMessage.cshtml
@@ -69,8 +69,15 @@
             </div>
             <div class="text-left m-t-15">
                 <button class="btn btn-primary m-b-30 m-t-15 f-s-14 p-l-20 p-r-20 m-r-10"><i class="fa fa-paper-plane m-r-5"></i> Gönder</button>
-                <button class="btn btn-dark m-b-30 m-t-15 f-s-14 p-l-20 p-r-20"><i class="ti-close m-r-5 f-s-12"></i> İptal Et</button>
+                <button class="btn btn-dark m-b-30 m-t-15 f-s-14 p-l-20 p-r-20" id="cancelButton"><i class="ti-close m-r-5 f-s-12"></i> İptal Et</button>
             </div>
         </form>
     </div>
 </div>
+
+<script>
+    document.getElementById('cancelButton').addEventListener('click', function (e) {
+        e.preventDefault(); // Formun gönderimini durdurur
+        window.location.href = '/AdminContact/Inbox'; // Yönlendirme işlemi
+    });
+</script>
