--- a/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
+++ b/Frontend/HotelProject.WebUI/Views/AdminLayout/SidebarPartial.cshtml
@@ -78,6 +78,11 @@
                 </a>
             </li>
             <li>
+                <a href="/RoleAssign/Index/" aria-expanded="false">
+                    <i class="fa fa-key menu-icon"></i><span class="nav-text">Rol Atamaları</span>
+                </a>
+            </li>
+            <li>
                 <a href="/AdminWorkLocation/Index/" aria-expanded="false">
                     <i class="fa fa-cogs menu-icon"></i><span class="nav-text">Ayarlar</span>
                 </a>
